tests/semantic_errors/sasha1003_3.tl
require "ifj21"

main()
